DocumentPrivate: Skip auto quotes when these looks already balanced

* Improve readability, const correctness
* const QChar as value, not reference

BUG:405089
BUG:382960
FIXED-IN: 5.57

Differential Revision: https://phabricator.kde.org/D19598